--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+
     <title>dayaa space</title>
 </head>
 <body>
+  <nav>
+
+  <div class="menu">
+      
+  <input type="checkbox" id="check">
+  <div class="side_bar">
+    <div class="title">
+     
+    </div>
+    <ul>
+          <li><a href="#"><i class="fas fa-qrcode"></i>Dashboard</a></li>
+          <li><a href="#"><i class="fas fa-link"></i>Shortcuts</a></li>
+          <li><a href="#"><i class="fas fa-stream"></i>Overview</a></li>
+          <li><a href="#"><i class="fas fa-calendar-week"></i>Events</a></li>
+          <li><a href="#"><i class="fas fa-question-circle"></i>About</a></li>
+          <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
+          <li><a href="#"><i class="fas fa-phone-volume"></i>Contact</a></li>
+          <li><a href="#"><i class="fas fa-comments"></i>Feedback</a></li>
+        </ul>
+        </div>
+     </div>
+  </nav>
+</body>
         <h1 style=" font-family: Arial, Helvetica, sans-serif; text-transform: capitalize; " >infinity space</h1>    
 </body>
 </html>
